--- a/android/src/main/res/layout/medium_template.xml
+++ b/android/src/main/res/layout/medium_template.xml
@@ -1,161 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.gms.ads.nativead.NativeAdView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.gms.ads.nativead.NativeAdView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="2dp">
+    android:layout_height="wrap_content">
 
-
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
         <com.google.android.gms.ads.nativead.MediaView
-            android:id="@+id/native_ad_media"
+            android:id="@+id/ad_media"
             android:layout_width="match_parent"
-            android:layout_height="180dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="5dp"
-            >
+            android:layout_height="150dp"
+            android:layout_centerHorizontal="true" />
 
-        </com.google.android.gms.ads.nativead.MediaView>
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="75dp"
-            android:orientation="horizontal">
+            android:layout_height="60dp"
+            android:layout_below="@+id/ad_media">
 
             <ImageView
-                android:id="@+id/native_ad_icon"
-                android:layout_width="65dp"
-                android:layout_height="65dp"
-                android:paddingRight="5dp"
-                android:scaleType="fitXY"
-                tools:background="#EDEDED" />
+                android:id="@+id/ad_icon"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_marginVertical="10dp"
+                android:layout_marginStart="10dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_margin="10dp"
+                android:layout_toStartOf="@id/call_to_action"
+                android:layout_toEndOf="@id/ad_icon"
                 android:orientation="vertical">
 
-                <RatingBar
-                    android:id="@+id/native_ad_rating"
-                    style="?android:attr/ratingBarStyleSmall"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:isIndicator="true"
-                    android:numStars="5"
-                    android:stepSize="0.5"
+                <TextView
+                    android:id="@+id/ad_headline"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:maxLines="1"
+                    android:text="Headline"
+                    android:textColor="@android:color/black"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
 
-
-                    />
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_margin="5dp"
-                    >
-                    <androidx.cardview.widget.CardView
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:elevation="0dp"
-                        app:cardBackgroundColor="#00000000"
-                        app:cardCornerRadius="2dp"
-                        app:cardElevation="0dp">
+                        android:layout_marginEnd="5dp"
+                        android:background="@drawable/curve_green_admark"
+                        android:gravity="center"
+                        android:paddingHorizontal="5dp"
+                        android:text="Ad"
+                        android:textColor="@android:color/white"
+                        android:textSize="10sp" />
 
-                        <TextView
-                            android:id="@+id/native_ad_attribution_small"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:background="#F19938"
-                            android:gravity="center"
-                            android:padding="2dp"
-                            android:text="Ad"
-                            android:textColor="#FFFFFF"
-                            android:textSize="10sp"
-                            android:layout_marginRight="5dp"
-
-
-
-                            />
-                    </androidx.cardview.widget.CardView>
                     <TextView
-                        android:id="@+id/native_ad_advertiser"
+                        android:id="@+id/ad_body"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:ellipsize="end"
-                        android:lines="1"
+                        android:gravity="start|center"
                         android:maxLines="1"
-                        android:textColor="#828282"
-                        android:textSize="12sp"
-                        tools:text="advertiser name" />
+                        android:text="Description"
+                        android:textColor="@android:color/darker_gray"
+                        android:textSize="10sp" />
+
                 </LinearLayout>
-
-
-                <TextView
-                    android:id="@+id/native_ad_headline"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:ellipsize="end"
-                    android:lines="1"
-                    android:maxLines="1"
-                    android:textColor="#000000"
-                    android:textSize="16sp"
-                    tools:text="Headline" />
-
-
             </LinearLayout>
 
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/native_ad_body"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#828282"
-            android:textSize="14sp"
-            android:ellipsize="end"
-            android:lines="2"
-            android:maxLines="2"
-            android:layout_marginBottom="5dp"
-            tools:text="body" />
-
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:background="#1A73E8"
-            android:elevation="0dp"
-            android:gravity="center"
-            app:cardBackgroundColor="#1A73E8"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="0dp"
-
-            >
-
             <Button
-                android:id="@+id/native_ad_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#1A73E8"
-                android:gravity="center"
-                android:paddingLeft="5dp"
-                android:paddingTop="5dp"
-                android:paddingRight="5dp"
-                android:paddingBottom="5dp"
-                android:textAlignment="center"
-                android:textAllCaps="false"
-                android:textColor="#ffff"
-                tools:text="install now"
-
-                />
-        </androidx.cardview.widget.CardView>
-
-
-    </LinearLayout>
-
-
+                android:id="@+id/call_to_action"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginVertical="10dp"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/curve_green_ad_btn"
+                android:text="INSTALL"
+                android:textColor="@android:color/white"
+                android:textStyle="bold"
+                app:backgroundTint="@null" />
+        </RelativeLayout>
+    </RelativeLayout>
 </com.google.android.gms.ads.nativead.NativeAdView>
