--- a/android/src/main/res/drawable/curve_green_ad_btn.xml
+++ b/android/src/main/res/drawable/curve_green_ad_btn.xml
@@ -3,8 +3,8 @@
     <item>
         <shape android:shape="rectangle">
             <gradient
-                android:endColor="@color/green"
-                android:startColor="@color/green" />
+                android:endColor="#16A416"
+                android:startColor="#16A416" />
             <corners android:radius="10dp" />
         </shape>
     </item>
