--- a/android/src/main/res/drawable/curve_green_admark.xml
+++ b/android/src/main/res/drawable/curve_green_admark.xml
@@ -3,9 +3,9 @@
     <item>
         <shape android:shape="rectangle">
             <gradient
-                android:endColor="@color/green"
-                android:startColor="@color/green" />
-            <corners android:radius="@dimen/_2sdp" />
+                android:endColor="#16A416"
+                android:startColor="#16A416" />
+            <corners android:radius="2dp" />
         </shape>
     </item>
 </layer-list>
