--- a/android/src/main/res/layout/medium_template.xml
+++ b/android/src/main/res/layout/medium_template.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content">
 
         <com.google.android.gms.ads.nativead.MediaView
-            android:id="@+id/ad_media"
+            android:id="@+id/native_ad_media"
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:layout_centerHorizontal="true" />
@@ -17,10 +17,10 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:layout_below="@+id/ad_media">
+            android:layout_below="@+id/native_ad_media">
 
             <ImageView
-                android:id="@+id/ad_icon"
+                android:id="@+id/native_ad_icon"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_alignParentStart="true"
@@ -32,12 +32,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="10dp"
-                android:layout_toStartOf="@id/call_to_action"
-                android:layout_toEndOf="@id/ad_icon"
+                android:layout_toStartOf="@id/native_ad_button"
+                android:layout_toEndOf="@id/native_ad_icon"
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/ad_headline"
+                    android:id="@+id/native_ad_headline"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -66,7 +66,7 @@
                         android:textSize="10sp" />
 
                     <TextView
-                        android:id="@+id/ad_body"
+                        android:id="@+id/native_ad_body"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="start|center"
@@ -79,7 +79,7 @@
             </LinearLayout>
 
             <Button
-                android:id="@+id/call_to_action"
+                android:id="@+id/native_ad_button"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:layout_alignParentEnd="true"
