--- a/android/src/main/res/layout/small_template.xml
+++ b/android/src/main/res/layout/small_template.xml
@@ -10,7 +10,7 @@
         android:layout_height="60dp">
 
         <ImageView
-            android:id="@+id/ad_icon"
+            android:id="@+id/native_ad_icon"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_alignParentStart="true"
@@ -22,8 +22,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="10dp"
-            android:layout_toStartOf="@id/call_to_action"
-            android:layout_toEndOf="@id/ad_icon"
+            android:layout_toStartOf="@id/native_ad_button"
+            android:layout_toEndOf="@id/native_ad_icon"
             android:orientation="vertical">
 
             <LinearLayout
@@ -33,7 +33,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/ad_headline"
+                    android:id="@+id/native_ad_headline"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:maxLines="1"
@@ -62,7 +62,7 @@
                     android:textSize="10sp" />
 
                 <TextView
-                    android:id="@+id/ad_body"
+                    android:id="@+id/native_ad_body"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="start|center"
@@ -75,7 +75,7 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/call_to_action"
+            android:id="@+id/native_ad_button"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_alignParentEnd="true"
